Labs/5-kubernetes/exercice4-ingress/app1deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app1pod
  template:
    metadata:
      labels:
        app: app1pod
    spec:
      containers:
      - name: app1container
        image: nginx:latest
        ports:
        - containerPort: 80
        lifecycle:
          postStart:
            exec:
              command: 
                - /bin/sh
                - -c
                - >                  
                  mkdir /usr/share/nginx/html/app1;
                  echo App 1 fanout from $HOSTNAME > /usr/share/nginx/html/app1/index.html;
                  echo App 1 vhosts from $HOSTNAME > /usr/share/nginx/html/index.html
