Labs/5-kubernetes/exercice4-ingress/myingressfanout.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingressfanout
spec:
  rules:
    - http:
        paths:
        - path: /app1
          pathType: Prefix
          backend:
            service:
              name: app1service
              port:
                number: 8080
        - path: /app2
          pathType: Prefix
          backend:
            service:
              name: app2service
              port:
                number: 8080
